Enable Netty's FFM malloc/free path and set ignoreExpensiveClean
Fixes: #54011